--- a/speechrecognition/index.html
+++ b/speechrecognition/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Speech Recognition</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="shortcut icon" href="img/speech.png" type="image/x-icon">
 </head>
 <body>
   <section>
     <h1>Speech<br> Recognition</h1>
-    <p>Available In Chrome😎 Only</p>
+    <p>Disponible para diferentes navegadores 🤡</p>
     <div class="container">
       <div class="texts">
       </div>
