--- a/APIgraficacion/index.html
+++ b/APIgraficacion/index.html
@@ -29,6 +29,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.0/jquery.min.js"
     integrity="sha512-suUtSPkqYmFd5Ls30Nz6bjDX+TCcfEzhFfqjijfdggsaFZoylvTj+2odBzshs0TCwYrYZhQeCgHgJEkncb2YVQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="js/min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
